# packer-templates-revisited

./: .gitignore  CHANGELOG.md  README.md  build.sh  cleanup.sh  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: centos7.yml  centos8.yml  debian-bullseye64.yml  debian-buster64.yml  debian-stretch64.yml  default.yml  fedora32.yml  fedora34.yml  rocky8.yml  ubuntu-bionic64.yml  ubuntu-focal64-desktop.yml  ubuntu-focal64.yml  ubuntu-xenial64.yml
Arch/: arch.json
CentOS/: centos7-desktop.json  centos7-desktop.json.pkr.hcl  centos7.json  centos7.json.pkr.hcl  centos8-stream.json  centos8.json  centos8.json.pkr.hcl  packer_cache
Debian/: debian-bullseye64.json  debian-bullseye64.json.pkr.hcl  debian-buster64.json  debian-buster64.json.pkr.hcl  debian-stretch64.json  debian-stretch64.json.pkr.hcl
Fedora/: fedora31.json  fedora31.json.pkr.hcl  fedora32.json  fedora32.json.pkr.hcl  fedora34.json.pkr.hcl
Rocky/: rocky8.json  rocky8.json.pkr.hcl
Ubuntu/: ubuntu-bionic64-desktop.json  ubuntu-bionic64-desktop.json.pkr.hcl  ubuntu-bionic64.json  ubuntu-bionic64.json.pkr.hcl  ubuntu-focal64-desktop.json  ubuntu-focal64-desktop.json.pkr.hcl  ubuntu-focal64.json  ubuntu-focal64.json.pkr.hcl  ubuntu-xenial64.json  ubuntu-xenial64.json.pkr.hcl
http/arch/: bootstrap.sh
http/centos/: ks.7.cfg  ks.8-stream.cfg  ks.8.cfg
http/debian/: preseed.cfg
playbooks/: .ansible-lint  arch.yml  base.yml  cleanup.yml  cloud-init.yml  debian.yml  desktop.yml  playbook.yml  redhat.yml  vagrant.yml  virtualbox.yml  vmware.yml
(+4 files in other folders)
