[tool.poetry]
name = "packer-templates-revisited"
version = "0.1.0"
description = ""
authors = ["Larry Smith Jr. <mrlesmithjr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ansible = "^4.7.0"

[tool.poetry.dev-dependencies]
ansible-lint = "^5.2.1"
mkdocs = "^1.2.3"
yamllint = "^1.26.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
